--- a/app/src/main/res/layout/fragment_task_consulta.xml
+++ b/app/src/main/res/layout/fragment_task_consulta.xml
@@ -73,7 +73,7 @@
         android:id="@+id/txtViewNota"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Nota"
+        android:text="@string/nota"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.076"
@@ -100,7 +100,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:enabled="false"
-        android:text="Guardar"
+        android:text="@string/Guardar"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.893"
