--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -57,7 +57,7 @@
 
     <fragment
         android:id="@+id/nav_slideshow"
-        android:name="com.example.gestoracademico.ui.ui.slideshow.PDFGeneratorFragment"
+        android:name="com.example.gestoracademico.ui.ui.pdfgenerator.PDFGeneratorFragment"
         android:label="@string/menu_export"
         tools:layout="@layout/fragment_slideshow">
         <action
